feat: 添加棋子样式&修改棋盘样式问题

--- a/chinese-cheese.html
+++ b/chinese-cheese.html
@@ -10,11 +10,26 @@
 <body>
     <div id="CheckerboardWrapper">
         <div id="Checkerboard">
-            <div class="grid" pos="01">01</div>
-            <div class="grid" pos="02">02</div>
-            <div class="grid" pos="03">03</div>
-            <div class="grid slant" pos="04">04</div>
-            <div class="grid slant-back" pos="05">05</div>
+            <div class="grid" pos="01">
+                01
+                <div class="chessman" group="black">車</div>
+            </div>
+            <div class="grid" pos="02">
+                02
+                <div class="chessman" group="black">馬</div>
+            </div>
+            <div class="grid" pos="03">
+                03
+                <div class="chessman" group="black">相</div>
+            </div>
+            <div class="grid slant" pos="04">
+                04
+                <div class="chessman" group="black">士</div>
+            </div>
+            <div class="grid slant-back" pos="05">
+                05
+                <div class="chessman" group="black">将</div>
+            </div>
             <div class="grid" pos="06">06</div>
             <div class="grid" pos="07">07</div>
             <div class="grid" pos="08">08</div>
@@ -42,14 +57,7 @@
             <div class="grid" pos="30">30</div>
             <div class="grid" pos="31">31</div>
             <div class="grid" pos="32">32</div>
-            <div class="grid" pos="33">33</div>
-            <div class="grid" pos="34">34</div>
-            <div class="grid" pos="35">35</div>
-            <div class="grid" pos="36">36</div>
-            <div class="grid" pos="37">37</div>
-            <div class="grid" pos="38">38</div>
-            <div class="grid" pos="39">39</div>
-            <div class="grid" pos="40">40</div>
+            <div class="divider" pos="33"></div>
             <div class="grid" pos="41">41</div>
             <div class="grid" pos="42">42</div>
             <div class="grid" pos="43">43</div>
@@ -77,12 +85,28 @@
             <div class="grid" pos="65">65</div>
             <div class="grid" pos="66">66</div>
             <div class="grid" pos="67">67</div>
-            <div class="grid slant-back" pos="68">68</div>
-            <div class="grid slant" pos="69">69</div>
-            <div class="grid" pos="70">70</div>
-            <div class="grid" pos="71">71</div>
-            <div class="grid" pos="72">72</div>
+            <div class="grid slant-back" pos="68">
+                68
+                <div class="chessman" group="red">帅</div>
+            </div>
+            <div class="grid slant" pos="69">
+                69
+                <div class="chessman" group="red">士</div>
+            </div>
+            <div class="grid" pos="70">
+                70
+                <div class="chessman" group="red">相</div>
+            </div>
+            <div class="grid" pos="71">
+                71
+                <div class="chessman" group="red">馬</div>
+            </div>
+            <div class="grid" pos="72">
+                72
+                <div class="chessman" group="red">車</div>
+            </div>
         </div>
     </div>
+    <script src="./game.js"></script>
 </body>
 </html>
