feat: 棋子补全&落点节点添加

--- a/chinese-cheese.html
+++ b/chinese-cheese.html
@@ -4,106 +4,276 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>中国象棋棋盘demo</title>
+    <title>中国象棋</title>
     <link rel="stylesheet" href="./chinese-cheese.css" />
 </head>
 <body>
     <div id="CheckerboardWrapper">
         <div id="Checkerboard">
-            <div class="grid" pos="01">
-                01
-                <div class="chessman" group="black">車</div>
+            <div class="grid">
+                <div class="pointer-black" row="1" col="1">
+                    <div class="chessman" group="black">車</div>
+                </div>
             </div>
-            <div class="grid" pos="02">
-                02
-                <div class="chessman" group="black">馬</div>
+            <div class="grid">
+                <div class="pointer-black" row="1" col="2">
+                    <div class="chessman" group="black">馬</div>
+                </div>
             </div>
-            <div class="grid" pos="03">
-                03
-                <div class="chessman" group="black">相</div>
+            <div class="grid">
+                <div class="pointer-black" row="1" col="3">
+                    <div class="chessman" group="black">相</div>
+                </div>
             </div>
-            <div class="grid slant" pos="04">
-                04
-                <div class="chessman" group="black">士</div>
+            <div class="grid slant">
+                <div class="pointer-black" row="1" col="4">
+                    <div class="chessman" group="black">士</div>
+                </div>
             </div>
-            <div class="grid slant-back" pos="05">
-                05
-                <div class="chessman" group="black">将</div>
+            <div class="grid slant-back">
+                <div class="pointer-black" row="1" col="5">
+                    <div class="chessman" group="black">将</div>
+                </div>
             </div>
-            <div class="grid" pos="06">06</div>
-            <div class="grid" pos="07">07</div>
-            <div class="grid" pos="08">08</div>
-            <div class="grid anchor-rb" pos="09">09</div>
-            <div class="grid anchor-lb" pos="10">10</div>
-            <div class="grid" pos="11">11</div>
-            <div class="grid slant-back" pos="12">12</div>
-            <div class="grid slant" pos="13">13</div>
-            <div class="grid" pos="14">14</div>
-            <div class="grid anchor-rb" pos="15">15</div>
-            <div class="grid anchor-lb" pos="16">16</div>
-            <div class="grid anchor-rt" pos="17">17</div>
-            <div class="grid anchor-lt" pos="18">18</div>
-            <div class="grid" pos="19">19</div>
-            <div class="grid" pos="20">20</div>
-            <div class="grid" pos="21">21</div>
-            <div class="grid" pos="22">22</div>
-            <div class="grid anchor-rt" pos="23">23</div>
-            <div class="grid anchor-lt" pos="24">24</div>
-            <div class="grid" pos="25">25</div>
-            <div class="grid" pos="26">26</div>
-            <div class="grid" pos="27">27</div>
-            <div class="grid" pos="28">28</div>
-            <div class="grid" pos="29">29</div>
-            <div class="grid" pos="30">30</div>
-            <div class="grid" pos="31">31</div>
-            <div class="grid" pos="32">32</div>
-            <div class="divider" pos="33"></div>
-            <div class="grid" pos="41">41</div>
-            <div class="grid" pos="42">42</div>
-            <div class="grid" pos="43">43</div>
-            <div class="grid" pos="44">44</div>
-            <div class="grid" pos="45">45</div>
-            <div class="grid" pos="46">46</div>
-            <div class="grid" pos="47">47</div>
-            <div class="grid" pos="48">48</div>
-            <div class="grid anchor-rb" pos="49">49</div>
-            <div class="grid anchor-lb" pos="50">50</div>
-            <div class="grid" pos="51">51</div>
-            <div class="grid" pos="52">52</div>
-            <div class="grid" pos="53">53</div>
-            <div class="grid" pos="54">54</div>
-            <div class="grid anchor-rb" pos="55">55</div>
-            <div class="grid anchor-lb" pos="56">56</div>
-            <div class="grid anchor-rt" pos="57">57</div>
-            <div class="grid anchor-lt" pos="58">58</div>
-            <div class="grid" pos="59">59</div>
-            <div class="grid slant" pos="60">60</div>
-            <div class="grid slant-back" pos="61">61</div>
-            <div class="grid" pos="62">62</div>
-            <div class="grid anchor-rt" pos="63">63</div>
-            <div class="grid anchor-lt" pos="64">64</div>
-            <div class="grid" pos="65">65</div>
-            <div class="grid" pos="66">66</div>
-            <div class="grid" pos="67">67</div>
-            <div class="grid slant-back" pos="68">
-                68
-                <div class="chessman" group="red">帅</div>
+            <div class="grid">
+                <div class="pointer-black" row="1" col="6">
+                    <div class="chessman" group="black">士</div>
+                </div>
             </div>
-            <div class="grid slant" pos="69">
-                69
-                <div class="chessman" group="red">士</div>
+            <div class="grid">
+                <div class="pointer-black" row="1" col="7">
+                    <div class="chessman" group="black">相</div>
+                </div>
             </div>
-            <div class="grid" pos="70">
-                70
-                <div class="chessman" group="red">相</div>
+            <div class="grid">
+                <div class="pointer-black" row="1" col="8">
+                    <div class="chessman" group="black">馬</div>
+                </div>
+                <div class="pointer-black pointer-rt" row="1" col="9">
+                    <div class="chessman" group="black">車</div>
+                </div>
             </div>
-            <div class="grid" pos="71">
-                71
-                <div class="chessman" group="red">馬</div>
+            <div class="grid anchor-rb">
+                <div class="pointer-black" row="2" col="1"></div>
             </div>
-            <div class="grid" pos="72">
-                72
-                <div class="chessman" group="red">車</div>
+            <div class="grid anchor-lb">
+                <div class="pointer-black" row="2" col="2"></div>
+            </div>
+            <div class="grid">
+                <div class="pointer-black" row="2" col="3"></div>
+            </div>
+            <div class="grid slant-back">
+                <div class="pointer-black" row="2" col="4"></div>
+            </div>
+            <div class="grid slant">
+                <div class="pointer-black" row="2" col="5"></div>
+            </div>
+            <div class="grid">
+                <div class="pointer-black" row="2" col="6"></div>
+            </div>
+            <div class="grid anchor-rb">
+                <div class="pointer-black" row="2" col="7"></div>
+            </div>
+            <div class="grid anchor-lb">
+                <div class="pointer-black" row="2" col="8"></div>
+                <div class="pointer-black pointer-rt" row="2" col="9"></div>
+            </div>
+            <div class="grid anchor-rt">
+                <div class="pointer-black" row="3" col="1"></div>
+            </div>
+            <div class="grid anchor-lt">
+                <div class="pointer-black" row="3" col="2">
+                    <div class="chessman" group="black">炮</div>
+                </div>
+            </div>
+            <div class="grid">
+                <div class="pointer-black" row="3" col="3"></div>
+            </div>
+            <div class="grid">
+                <div class="pointer-black" row="3" col="4"></div>
+            </div>
+            <div class="grid">
+                <div class="pointer-black" row="3" col="5"></div>
+            </div>
+            <div class="grid">
+                <div class="pointer-black" row="3" col="6"></div>
+            </div>
+            <div class="grid anchor-rt">
+                <div class="pointer-black" row="3" col="7"></div>
+            </div>
+            <div class="grid anchor-lt">
+                <div class="pointer-black" row="3" col="8">
+                    <div class="chessman" group="black">炮</div>
+                </div>
+                <div class="pointer-black pointer-rt" row="3" col="9"></div>
+            </div>
+            <div class="grid">
+                <div class="pointer-black" row="4" col="1">
+                    <div class="chessman" group="black">卒</div>
+                </div>
+            </div>
+            <div class="grid">
+                <div class="pointer-black" row="4" col="2"></div>
+            </div>
+            <div class="grid">
+                <div class="pointer-black" row="4" col="3">
+                    <div class="chessman" group="black">卒</div>
+                </div>
+            </div>
+            <div class="grid">
+                <div class="pointer-black" row="4" col="4"></div>
+            </div>
+            <div class="grid">
+                <div class="pointer-black" row="4" col="5">
+                    <div class="chessman" group="black">卒</div>
+                </div>
+            </div>
+            <div class="grid">
+                <div class="pointer-black" row="4" col="6"></div>
+            </div>
+            <div class="grid">
+                <div class="pointer-black" row="4" col="7">
+                    <div class="chessman" group="black">卒</div>
+                </div>
+            </div>
+            <div class="grid">
+                <div class="pointer-black" row="4" col="8"></div>
+                <div class="pointer-black pointer-rt" row="4" col="9">
+                    <div class="chessman" group="black">卒</div>
+                </div>
+            </div>
+            <div class="divider"></div>
+            <div class="grid">
+                <div class="pointer-red" row="5" col="1">
+                    <div class="chessman" group="red">兵</div>
+                </div>
+            </div>
+            <div class="grid">
+                <div class="pointer-red" row="5" col="2"></div>
+            </div>
+            <div class="grid">
+                <div class="pointer-red" row="5" col="3">
+                    <div class="chessman" group="red">兵</div>
+                </div>
+            </div>
+            <div class="grid">
+                <div class="pointer-red" row="5" col="4"></div>
+            </div>
+            <div class="grid">
+                <div class="pointer-red" row="5" col="5">
+                    <div class="chessman" group="red">兵</div>
+                </div>
+            </div>
+            <div class="grid">
+                <div class="pointer-red" row="5" col="6"></div>
+            </div>
+            <div class="grid">
+                <div class="pointer-red" row="5" col="7">
+                    <div class="chessman" group="red">兵</div>
+                </div>
+            </div>
+            <div class="grid">
+                <div class="pointer-red" row="5" col="8"></div>
+                <div class="pointer-red pointer-rb" row="5" col="9">
+                    <div class="chessman" group="red">兵</div>
+                </div>
+            </div>
+            <div class="grid anchor-rb">
+                <div class="pointer-red" row="6" col="1"></div>
+            </div>
+            <div class="grid anchor-lb">
+                <div class="pointer-red" row="6" col="2">
+                    <div class="chessman" group="red">砲</div>
+                </div>
+            </div>
+            <div class="grid">
+                <div class="pointer-red" row="6" col="3"></div>
+            </div>
+            <div class="grid">
+                <div class="pointer-red" row="6" col="4"></div>
+            </div>
+            <div class="grid">
+                <div class="pointer-red" row="6" col="5"></div>
+            </div>
+            <div class="grid">
+                <div class="pointer-red" row="6" col="6"></div>
+            </div>
+            <div class="grid anchor-rb">
+                <div class="pointer-red" row="6" col="7"></div>
+            </div>
+            <div class="grid anchor-lb">
+                <div class="pointer-red" row="6" col="8">
+                    <div class="chessman" group="red">砲</div>
+                </div>
+                <div class="pointer-red pointer-rb" row="6" col="9"></div>
+            </div>
+            <div class="grid anchor-rt">
+                <div class="pointer-red" row="7" col="1"></div>
+            </div>
+            <div class="grid anchor-lt">
+                <div class="pointer-red" row="7" col="2"></div>
+            </div>
+            <div class="grid">
+                <div class="pointer-red" row="7" col="3"></div>
+            </div>
+            <div class="grid slant">
+                <div class="pointer-red" row="7" col="4"></div>
+            </div>
+            <div class="grid slant-back">
+                <div class="pointer-red" row="7" col="5"></div>
+            </div>
+            <div class="grid">
+                <div class="pointer-red" row="7" col="6"></div>
+            </div>
+            <div class="grid anchor-rt">
+                <div class="pointer-red" row="7" col="7"></div>
+            </div>
+            <div class="grid anchor-lt">
+                <div class="pointer-red" row="7" col="8"></div>
+                <div class="pointer-red pointer-rb" row="7" col="9"></div>
+            </div>
+            <div class="grid">
+                <div class="pointer-red" row="8" col="1">
+                    <div class="chessman" group="red">車</div>
+                </div>
+            </div>
+            <div class="grid">
+                <div class="pointer-red" row="8" col="2">
+                    <div class="chessman" group="red">馬</div>
+                </div>
+            </div>
+            <div class="grid">
+                <div class="pointer-red" row="8" col="3">
+                    <div class="chessman" group="red">相</div>
+                </div>
+            </div>
+            <div class="grid slant-back">
+                <div class="pointer-red" row="8" col="4">
+                    <div class="chessman" group="red">士</div>
+                </div>
+            </div>
+            <div class="grid slant">
+                <div class="pointer-red" row="8" col="5">
+                    <div class="chessman" group="red">帅</div>
+                </div>
+            </div>
+            <div class="grid">
+                <div class="pointer-red" row="8" col="6">
+                    <div class="chessman" group="red">士</div>
+                </div>
+            </div>
+            <div class="grid">
+                <div class="pointer-red" row="8" col="7">
+                    <div class="chessman" group="red">相</div>
+                </div>
+            </div>
+            <div class="grid">
+                <div class="pointer-red" row="8" col="8">
+                    <div class="chessman" group="red">馬</div>
+                </div>
+                <div class="pointer-red pointer-rb" row="8" col="9">
+                    <div class="chessman" group="red">車</div>
+                </div>
             </div>
         </div>
     </div>
