--- a/chinese-cheese.html
+++ b/chinese-cheese.html
@@ -27,7 +27,7 @@
             </div>
             <div class="grid slant">
                 <div class="pointer-black" row="1" col="4">
-                    <div class="chessman" group="black">士</div>
+                    <div class="chessman" group="black">仕</div>
                 </div>
             </div>
             <div class="grid slant-back">
@@ -37,7 +37,7 @@
             </div>
             <div class="grid">
                 <div class="pointer-black" row="1" col="6">
-                    <div class="chessman" group="black">士</div>
+                    <div class="chessman" group="black">仕</div>
                 </div>
             </div>
             <div class="grid">
